--- a/package.json
+++ b/package.json
@@ -1,13 +1,22 @@
 {
+    "author": {
+        "name": "Muhammad Zaki",
+        "email": "mahmadzekoo@gmail.com"},
+    "name": "larazillow",
+    "version": "0.1.0",
+    "license": "MIT",
     "private": true,
     "type": "module",
     "scripts": {
         "dev": "vite",
+        "lint": "eslint --ext .js,.vue resources/js/",
         "build": "vite build"
     },
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.0.4",
         "axios": "^1.6.4",
+        "eslint": "^8.56.0",
+        "eslint-plugin-vue": "^9.21.1",
         "laravel-vite-plugin": "^1.0.0",
         "vite": "^5.0.0",
         "vue": "^3.4.19"
