--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "version": "0.1.0",
     "license": "MIT",
     "private": true,
-    "type": "commonjs",
+    "type": "module",
     "scripts": {
         "dev": "vite",
         "lint": "eslint --ext .js,.vue resources/js/",
