--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,7 +2,8 @@
     "compilerOptions": {
         "baseUrl": ".",
         "paths": {
-            "@/*": ["resources/js/*"]
+            "@/*": ["resources/js/*"],
+            "ziggy": ["./vendor/tightenco/ziggy"]
         }
     },
     "exclude": ["node_modules"]
