--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "scripts": {
         "dev": "vite",
         "lint": "eslint --ext .js,.vue resources/js/",
+        "lint:fix": "npm run lint -- --fix",
         "build": "vite build"
     },
     "devDependencies": {
